[package]
name = "aora"
version = "0.2.0"
description = "Append-only random-accessed data persistence"
authors = ["Dr. Maxim Orlovsky <orlovsky@ubideco.org>"]
keywords = ["database", "append-only-log"]
categories = ["data-structures", "database-implementations"]
repository = "https://github.com/rust-amplify/aora"
homepage = "https://github.com/rust-amplify"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.77.0"

[dependencies]
strict_encoding = { version = "2.8.1", optional = true }

[features]
default = ["file-strict"]
file-strict = ["strict_encoding"]
