[package]
name = "aora"
version = "0.5.0"
description = "Append-only random-accessed data persistence"
authors = ["Dr. Maxim Orlovsky <orlovsky@ubideco.org>"]
keywords = ["database", "append-only-log"]
categories = ["data-structures", "database-implementations"]
repository = "https://github.com/rust-amplify/aora"
homepage = "https://github.com/rust-amplify"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.81.0"

[dependencies]
amplify = { version = "4.8.0", default-features = false, features = ["derive"] }
binfile = { version = "0.2.0", optional = true }
strict_encoding = { version = "2.8.1", optional = true }
indexmap = { version = "2.9.0", optional = true }
log = "0.4.27"

[dev-dependencies]
tempfile = "3.19.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.8.4", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = ["all"]

[features]
default = ["file-strict"]
std = ["amplify/std"]
file-strict = ["std", "strict_encoding", "indexmap", "binfile"]
